--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-Django==1.7.1
-beautifulsoup4==4.3.2
-lxml==3.4.1
-oauthlib==0.7.2
-requests==2.5.0
-requests-oauthlib==0.4.2
-requests-toolbelt==0.3.1
-six==1.8.0
-wsgiref==0.1.2
+Django==1.8.4
+beautifulsoup4==4.4.1
+click==5.1
+first==2.0.1
+lxml==3.4.4
+oauthlib==1.0.3
+requests==2.7.0
+requests-oauthlib==0.5.0
+requests-toolbelt==0.4.0
+six==1.9.0
