--- a/config.toml
+++ b/config.toml
@@ -5,21 +5,27 @@ theme = "cocoa"
 
 [[menu.main]]
   name       = "About"
-  weight     = -120
+  weight     = -130
   identifier = "about"
   url        = "/about/"
 
 [[menu.main]]
   name       = "Blog"
-  weight     = -110
+  weight     = -120
   identifier = "blog"
   url        = "/blog/"
 
 [[menu.main]]
   name       = "Projects"
-  weight     = -100
+  weight     = -110
   identifier = "projects"
   url        = "/projects/"
+
+[[menu.main]]
+  name       = "Resume"
+  weight     = -100
+  identifier = "resume"
+  url        = "resume.pdf"
 
 [params]
   include_rss      = true                          # include RSS <link> tag in <head> and show RSS icon
