Add gitlab link
Use my fork of the theme for now until the pull request is merged.

--- a/config.toml
+++ b/config.toml
@@ -33,6 +33,7 @@ theme = "cocoa"
   author           = "Chris Tarazi"
   dateform         = "Jan 2, 2006"
   dateformfull     = "Mon Jan 2 2006 15:04:05 MST"
+  gitlab           = "//gitlab.com/christarazi"
   github           = "//github.com/christarazi"
   keybase          = "//keybase.io/christarazi"
   lang             = "en"
